# locadora-plp

./: CHANGELOG.md  Main.hi  Main.hs  PLP-Locadora.cabal  README.md  locadora-plp.cabal  package.yaml
.stack-work/: stack.sqlite3
DataBase/: Cliente.json  Filme.json  Funcionario.json  GerenciadorBD.hi  GerenciadorBD.hs  Gerente.json  Historico.json  Jogo.json  Serie.json
Functions/: ClienteFunctions.hs  FuncionarioFunctions.hs  GerenteFunctions.hs
Haskell/: PLP-Locadora.cabal
Models/: Cliente.hi  Cliente.hs  Compra.hi  Compra.hs  Filme.hi  Filme.hs  Funcionario.hi  Funcionario.hs  Gerente.hi  Gerente.hs  Jogo.hi  Jogo.hs  Produto.hi  Produto.hs  Serie.hi  Serie.hs
Prolog/: cliente.pl  constantes.pl  funcionario.pl  gerente.pl  main.pl  utils.pl
Prolog/DataBase/: Cliente.json  Filme.json  Funcionario.json  GerenciadorBD.pl  Gerente.json  Historico.json  Jogo.json  Serie.json  gerenciadorClientes.pl  gerenciadorFuncionarios.pl  gerenciadorGeral.pl  gerenciadorGerentes.pl  gerenciadorProdutos.pl
app/: Main.hs  README.md
app/DataBase/: Cliente.json  Filme.json  Funcionario.json  GerenciadorBD.hs  Historico.json  Serie.json
app/Functions/: ClienteFunctions.hs  ClienteFunctionsCopy.hs  FuncionarioFunctions.hs  GerenteFunctions.hs
app/Models/: Cliente.hs  Compra.hs  Filme.hs  Funcionario.hs  Gerente.hs  Jogo.hs  Produto.hs  Serie.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/DataBase/: GerenciadorBD.hs
src/Functions/: FuncionarioFunctions.hs  GerenteFunctions.hs
(+40 files in other folders)
