cabal-version:      2.4
name:               PLP-Locadora
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             João Juvino
maintainer:         joao.pedro.santos@ccc.ufcg.edu.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable PLP-Locadora
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        DataBase.GerenciadorBD
        Functions.ClienteFunctions
        Functions.GerenteFunctions
        Functions.FuncionarioFunctions
        Models.Cliente
        Models.Compra
        Models.Filme
        Models.Funcionario
        Models.Gerente
        Models.Jogo
        Models.Produto
        Models.Serie

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0, aeson, bytestring, directory >= 1.3.6.2, time, process, random
    hs-source-dirs:   app
    default-language: Haskell2010
